# Determined

./: .determined_session.json  .determinedignore.example  .gitignore  CLAUDE.md  README.md  SESSION_STATE.md  act.bat  determined.cfg  pyproject.toml
.claude/: launch.json  session_start_hook.py  settings.json  step_queue.md  step_queue_hook.ps1
.claude/hooks/: validate_shell.py
determined/: ask.py  config.py
determined/agent/: agent_prompt.py  agent_resolver.py  agent_tools.py  bag_store.py  bag_tools.py  claim_verifier.py  classify_stub.py  claude_eval.py  context_compactor.py  corpus_projections.py  discovery_agent.py  doc_extractor.py  edge_tools.py  edge_types.py  evaluator.py  graph_utils.py  graph_viz.py  intent_director.py  knowledge_status.py  llm_client.py  local_agent.py  mine_design_docs.py  pattern_detector.py  pattern_executor.py  reasoning_engine.py  reasoning_lenses.py  risk_annotator.py  semantic_cache.py  stub_classifier.py  stub_projector.py  task_generator.py  task_rereferencer.py  tool_registry.py
determined/api/: get_llm_context.py  inspect_symbol.py  oracle_router.py  query_reasoning.py
determined/assessor/: assessor.py  epistemic_policy.py  (+2 more)
docs/: ANALYSIS_MODEL.md  CLOSURE.md  COMMONPLACE_JOURNEY.md  COMMONPLACE_USER_JOURNEY.md  COMMONPLACE_VISION.md  DESIGN.md  DESIGN_ARC.md  DISCOVERY_MODEL.md  EXPERIMENTS.md  GETTING_STARTED.md  HISTORY.md  PRACTICES.md  REASONING_MODEL.md  RM15_findings.md  RM17_findings.md  SETUP.md  TEST_MAP.md  TRACKER.md  UI_EVAL.md  UI_REDESIGN.md  UI_VISION.md  VISUAL_PROJECTION.md  sots.md
memory/: feedback_test_targeting.md
scripts/: capn.py  capn_hook.py
tests/: item14_phase1_pattern_tools.py  item14_phase2_instructions.md  test_assessor_decision.py  test_edge_tools.py  test_embedding_seeds.py  test_epistemic_policy.py  test_hard_block_regression.py
tools/: ingest_lang_corpus.py  lang_quality_probe.py  run_regression.py
(+271 files in other folders)
