[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "determined-analysis"
version = "0.1.0"
description = "Deterministic code analysis tool — graph-backed, query-algebra driven, AI-navigable."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "requests>=2.28",
    "networkx>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
ui = [
    "flask>=3.0",
    "flask-socketio>=5.0",
]
embeddings = [
    "sentence-transformers>=2.0",
]
viz = [
    "matplotlib>=3.6",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
determined = "determined.ask:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["determined*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow and not live_llm'"
markers = [
    "slow: calls real LLM or embedding model; skipped by default (run with -m slow)",
    "live_llm: alias for slow; skipped by default",
]
